--- a/ToDoList/UI/Cells/TaskTableViewCell.xib
+++ b/ToDoList/UI/Cells/TaskTableViewCell.xib
@@ -1,21 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TaskTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="TaskTableViewCell" customModule="ToDoList" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cea-iN-ohL">
+                        <rect key="frame" x="8" y="8" width="224" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="1sr-vJ-Zl7"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uff-Ik-dre">
+                        <rect key="frame" x="8" y="45" width="224" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="cP3-dE-ffu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZDq-Rx-SZb">
+                        <rect key="frame" x="248" y="8" width="64" height="62"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="64" id="tST-MF-SXm"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="cea-iN-ohL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="4Sn-zt-DhW"/>
+                    <constraint firstAttribute="trailing" secondItem="ZDq-Rx-SZb" secondAttribute="trailing" constant="8" id="B3u-JA-Nm5"/>
+                    <constraint firstItem="cea-iN-ohL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Jnw-2Y-0T0"/>
+                    <constraint firstItem="Uff-Ik-dre" firstAttribute="top" secondItem="cea-iN-ohL" secondAttribute="bottom" constant="16" id="RWJ-L3-nWd"/>
+                    <constraint firstItem="Uff-Ik-dre" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="c38-fS-G6l"/>
+                    <constraint firstItem="ZDq-Rx-SZb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="cb0-Cx-8S7"/>
+                    <constraint firstAttribute="bottom" secondItem="Uff-Ik-dre" secondAttribute="bottom" constant="8" id="fbl-pi-zJz"/>
+                    <constraint firstItem="ZDq-Rx-SZb" firstAttribute="leading" secondItem="cea-iN-ohL" secondAttribute="trailing" constant="16" id="ki3-jQ-zJl"/>
+                    <constraint firstAttribute="bottom" secondItem="ZDq-Rx-SZb" secondAttribute="bottom" constant="8" id="x80-bX-0Ub"/>
+                    <constraint firstItem="ZDq-Rx-SZb" firstAttribute="leading" secondItem="Uff-Ik-dre" secondAttribute="trailing" constant="16" id="zR2-3J-OlV"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="lastNameLabel" destination="Uff-Ik-dre" id="oW0-2d-Ys5"/>
+                <outlet property="nameLabel" destination="cea-iN-ohL" id="yPP-WB-WiU"/>
+                <outlet property="profileImage" destination="ZDq-Rx-SZb" id="R3Z-S7-KgC"/>
+            </connections>
+            <point key="canvasLocation" x="138.93129770992365" y="32.394366197183103"/>
         </tableViewCell>
     </objects>
 </document>
