--- a/ToDoList/Views/SignIn/SignInViewController.xib
+++ b/ToDoList/Views/SignIn/SignInViewController.xib
@@ -1,22 +1,121 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignInViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignInViewController" customModule="ToDoList" customModuleProvider="target">
             <connections>
+                <outlet property="emailTextField" destination="PjD-oh-RIe" id="htT-3M-ZFU"/>
+                <outlet property="iconImageView" destination="nV4-d6-YR1" id="c8M-vq-egD"/>
+                <outlet property="passwordTextField" destination="mIv-ei-0ne" id="KsH-p9-heH"/>
+                <outlet property="signInButton" destination="D2L-fX-Md1" id="v5f-Ye-bn5"/>
+                <outlet property="signUpButton" destination="lPB-QJ-8ZP" id="Kni-dA-Azi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nV4-d6-YR1">
+                    <rect key="frame" x="132.66666666666666" y="75" width="127.99999999999997" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="Ucs-Av-Xxi"/>
+                        <constraint firstAttribute="width" constant="128" id="hhx-Oe-AWB"/>
+                    </constraints>
+                </imageView>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PjD-oh-RIe">
+                    <rect key="frame" x="16" y="235" width="361" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mIv-ei-0ne">
+                    <rect key="frame" x="16" y="285" width="361" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2L-fX-Md1">
+                    <rect key="frame" x="16" y="335" width="361" height="40"/>
+                    <color key="backgroundColor" systemColor="linkColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="sSG-lT-1TJ"/>
+                    </constraints>
+                    <color key="tintColor" systemColor="labelColor"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    <connections>
+                        <action selector="requestSignIn:" destination="-1" eventType="touchUpInside" id="Rf0-Mf-GuR"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lPB-QJ-8ZP">
+                    <rect key="frame" x="16" y="762" width="361" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="du2-mZ-3pr"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    <connections>
+                        <action selector="presentSignUP:" destination="-1" eventType="touchUpInside" id="QtX-ss-1od"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLM-ee-66e">
+                    <rect key="frame" x="16" y="75" width="32" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="32" id="6eh-91-YGv"/>
+                        <constraint firstAttribute="height" constant="32" id="SSx-Q1-NVQ"/>
+                    </constraints>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal">
+                        <imageReference key="image" image="chevron.left" catalog="system" symbolScale="large"/>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="semibold"/>
+                    </state>
+                    <connections>
+                        <action selector="dismissView:" destination="-1" eventType="touchUpInside" id="wAb-CM-egB"/>
+                    </connections>
+                </button>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemRedColor"/>
+            <constraints>
+                <constraint firstItem="mIv-ei-0ne" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="0cw-ys-4y0"/>
+                <constraint firstItem="D2L-fX-Md1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="3VI-dZ-KVo"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="D2L-fX-Md1" secondAttribute="trailing" constant="16" id="8TZ-O1-G9E"/>
+                <constraint firstItem="PjD-oh-RIe" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ADv-T1-CY0"/>
+                <constraint firstItem="nV4-d6-YR1" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="BF7-1B-6Qa"/>
+                <constraint firstItem="PjD-oh-RIe" firstAttribute="top" secondItem="nV4-d6-YR1" secondAttribute="bottom" constant="32" id="H6c-RY-OO6"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="lPB-QJ-8ZP" secondAttribute="bottom" constant="16" id="TXe-Gy-D1z"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="PjD-oh-RIe" secondAttribute="trailing" constant="16" id="W09-mf-Nrs"/>
+                <constraint firstItem="nV4-d6-YR1" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="dwF-rF-bGa"/>
+                <constraint firstItem="RLM-ee-66e" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="fhu-5d-G08"/>
+                <constraint firstItem="D2L-fX-Md1" firstAttribute="top" secondItem="mIv-ei-0ne" secondAttribute="bottom" constant="16" id="mWX-Yd-lfZ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lPB-QJ-8ZP" secondAttribute="trailing" constant="16" id="mvs-vW-VcM"/>
+                <constraint firstItem="lPB-QJ-8ZP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="nwS-nT-Rkc"/>
+                <constraint firstItem="mIv-ei-0ne" firstAttribute="top" secondItem="PjD-oh-RIe" secondAttribute="bottom" constant="16" id="piL-bT-pJT"/>
+                <constraint firstItem="RLM-ee-66e" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="thZ-Ig-MBB"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="mIv-ei-0ne" secondAttribute="trailing" constant="16" id="ubW-Uo-DUs"/>
+            </constraints>
+            <point key="canvasLocation" x="161" y="24"/>
         </view>
     </objects>
+    <resources>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
