--- a/ToDoList/Views/TaskList/TaskListViewController.xib
+++ b/ToDoList/Views/TaskList/TaskListViewController.xib
@@ -1,22 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TaskListViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TaskListViewController" customModule="ToDoList" customModuleProvider="target">
             <connections>
+                <outlet property="addTaskButton" destination="yVV-a2-k3k" id="JVf-Nw-f8U"/>
+                <outlet property="taskTableView" destination="eif-xg-QCd" id="1bj-0N-UzX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eif-xg-QCd">
+                    <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9l7-O8-LK3">
+                    <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <items>
+                        <navigationItem title="Tareas" id="vND-Z2-xPO">
+                            <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" style="plain" id="yVV-a2-k3k">
+                                <connections>
+                                    <action selector="addNewTask:" destination="-1" id="Glk-Bl-rt2"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="eif-xg-QCd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DUQ-kL-RAX"/>
+                <constraint firstItem="eif-xg-QCd" firstAttribute="top" secondItem="9l7-O8-LK3" secondAttribute="bottom" id="GIs-lo-Moo"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eif-xg-QCd" secondAttribute="bottom" id="RFb-aR-CPc"/>
+                <constraint firstItem="9l7-O8-LK3" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bzv-dW-UeC"/>
+                <constraint firstItem="9l7-O8-LK3" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="hnB-pn-Xwj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eif-xg-QCd" secondAttribute="trailing" id="oDx-hn-IqV"/>
+                <constraint firstItem="9l7-O8-LK3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ydv-1D-e2q"/>
+            </constraints>
+            <point key="canvasLocation" x="140" y="21"/>
         </view>
     </objects>
+    <resources>
+        <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
