--- a/ToDoList/Views/TaskList/TaskListViewController.xib
+++ b/ToDoList/Views/TaskList/TaskListViewController.xib
@@ -29,11 +29,20 @@
                     <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                     <items>
                         <navigationItem title="Tareas" id="vND-Z2-xPO">
-                            <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" style="plain" id="yVV-a2-k3k">
-                                <connections>
-                                    <action selector="addNewTask:" destination="-1" id="Glk-Bl-rt2"/>
-                                </connections>
+                            <barButtonItem key="leftBarButtonItem" image="arrow.left.to.line.alt" catalog="system" id="Yta-Xs-IC4">
+                                <color key="tintColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </barButtonItem>
+                            <rightBarButtonItems>
+                                <barButtonItem image="plus" catalog="system" style="plain" id="yVV-a2-k3k">
+                                    <color key="tintColor" red="0.1215686275" green="0.32549019610000002" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <connections>
+                                        <action selector="addNewTask:" destination="-1" id="Glk-Bl-rt2"/>
+                                    </connections>
+                                </barButtonItem>
+                                <barButtonItem image="person.circle" catalog="system" id="Kgh-qy-bSY">
+                                    <color key="tintColor" red="0.1215686275" green="0.32549019610000002" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </barButtonItem>
+                            </rightBarButtonItems>
                         </navigationItem>
                     </items>
                 </navigationBar>
@@ -53,6 +62,8 @@
         </view>
     </objects>
     <resources>
+        <image name="arrow.left.to.line.alt" catalog="system" width="128" height="100"/>
+        <image name="person.circle" catalog="system" width="128" height="123"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
