--- a/ToDoList/UI/Cells/TaskTableViewCell.xib
+++ b/ToDoList/UI/Cells/TaskTableViewCell.xib
@@ -10,24 +10,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="TaskTableViewCell" customModule="ToDoList" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskTableViewCell" rowHeight="115" id="KGk-i7-Jjw" customClass="TaskTableViewCell" customModule="ToDoList" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cea-iN-ohL">
-                        <rect key="frame" x="8" y="8" width="224" height="21"/>
+                        <rect key="frame" x="16" y="18" width="256" height="20.333333333333329"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="1sr-vJ-Zl7"/>
+                            <constraint firstAttribute="height" constant="20.329999999999998" id="42V-Hb-jZo"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uff-Ik-dre">
-                        <rect key="frame" x="8" y="45" width="224" height="25"/>
+                        <rect key="frame" x="16" y="48" width="288" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="cP3-dE-ffu"/>
                         </constraints>
@@ -35,33 +35,63 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZDq-Rx-SZb">
-                        <rect key="frame" x="248" y="8" width="64" height="62"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2c6-iX-QxN">
+                        <rect key="frame" x="280" y="16" width="24" height="24"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="64" id="tST-MF-SXm"/>
+                            <constraint firstAttribute="height" constant="24" id="0do-N9-tcb"/>
+                            <constraint firstAttribute="width" constant="24" id="plu-E5-gHD"/>
+                        </constraints>
+                        <color key="tintColor" red="0.1215686275" green="0.32549019610000002" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" image="circle" catalog="system"/>
+                    </button>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar.badge.clock.rtl" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="REs-IK-4ax">
+                        <rect key="frame" x="13.333333333333334" y="82.666666666666657" width="22.666666666666664" height="19.666666666666671"/>
+                        <color key="tintColor" red="0.1215686275" green="0.32549019610000002" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="gJb-vz-COE"/>
+                            <constraint firstAttribute="width" constant="20" id="m22-nO-kGf"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GyD-Zv-ULp">
+                        <rect key="frame" x="44" y="80.666666666666671" width="244" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="04e-fx-kcD"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="cea-iN-ohL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="4Sn-zt-DhW"/>
-                    <constraint firstAttribute="trailing" secondItem="ZDq-Rx-SZb" secondAttribute="trailing" constant="8" id="B3u-JA-Nm5"/>
-                    <constraint firstItem="cea-iN-ohL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Jnw-2Y-0T0"/>
-                    <constraint firstItem="Uff-Ik-dre" firstAttribute="top" secondItem="cea-iN-ohL" secondAttribute="bottom" constant="16" id="RWJ-L3-nWd"/>
-                    <constraint firstItem="Uff-Ik-dre" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="c38-fS-G6l"/>
-                    <constraint firstItem="ZDq-Rx-SZb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="cb0-Cx-8S7"/>
-                    <constraint firstAttribute="bottom" secondItem="Uff-Ik-dre" secondAttribute="bottom" constant="8" id="fbl-pi-zJz"/>
-                    <constraint firstItem="ZDq-Rx-SZb" firstAttribute="leading" secondItem="cea-iN-ohL" secondAttribute="trailing" constant="16" id="ki3-jQ-zJl"/>
-                    <constraint firstAttribute="bottom" secondItem="ZDq-Rx-SZb" secondAttribute="bottom" constant="8" id="x80-bX-0Ub"/>
-                    <constraint firstItem="ZDq-Rx-SZb" firstAttribute="leading" secondItem="Uff-Ik-dre" secondAttribute="trailing" constant="16" id="zR2-3J-OlV"/>
+                    <constraint firstItem="Uff-Ik-dre" firstAttribute="top" secondItem="2c6-iX-QxN" secondAttribute="bottom" constant="8" id="08H-mf-77V"/>
+                    <constraint firstItem="REs-IK-4ax" firstAttribute="leading" secondItem="Uff-Ik-dre" secondAttribute="leading" id="37T-f1-2GP"/>
+                    <constraint firstAttribute="trailing" secondItem="2c6-iX-QxN" secondAttribute="trailing" constant="16" id="9bU-28-JoO"/>
+                    <constraint firstItem="cea-iN-ohL" firstAttribute="centerY" secondItem="2c6-iX-QxN" secondAttribute="centerY" id="GKS-lq-luu"/>
+                    <constraint firstItem="GyD-Zv-ULp" firstAttribute="leading" secondItem="REs-IK-4ax" secondAttribute="trailing" constant="8" id="Gma-q0-Sn4"/>
+                    <constraint firstItem="cea-iN-ohL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="HQq-o5-9KJ"/>
+                    <constraint firstItem="Uff-Ik-dre" firstAttribute="leading" secondItem="cea-iN-ohL" secondAttribute="leading" id="Nu9-Y7-Jwj"/>
+                    <constraint firstItem="REs-IK-4ax" firstAttribute="top" secondItem="Uff-Ik-dre" secondAttribute="bottom" constant="8" id="Svh-jr-jTq"/>
+                    <constraint firstItem="Uff-Ik-dre" firstAttribute="trailing" secondItem="2c6-iX-QxN" secondAttribute="trailing" id="Yan-xc-3ZS"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="GyD-Zv-ULp" secondAttribute="trailing" constant="16" id="dak-ej-6pq"/>
+                    <constraint firstItem="GyD-Zv-ULp" firstAttribute="centerY" secondItem="REs-IK-4ax" secondAttribute="centerY" id="eJf-no-iaA"/>
+                    <constraint firstItem="2c6-iX-QxN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="lht-ly-DUE"/>
+                    <constraint firstItem="2c6-iX-QxN" firstAttribute="leading" secondItem="cea-iN-ohL" secondAttribute="trailing" constant="8" id="wSN-BI-e9R"/>
+                    <constraint firstAttribute="bottom" secondItem="REs-IK-4ax" secondAttribute="bottom" constant="16" id="zQY-j0-tZz"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="lastNameLabel" destination="Uff-Ik-dre" id="oW0-2d-Ys5"/>
-                <outlet property="nameLabel" destination="cea-iN-ohL" id="yPP-WB-WiU"/>
-                <outlet property="profileImage" destination="ZDq-Rx-SZb" id="R3Z-S7-KgC"/>
+                <outlet property="dateLabel" destination="GyD-Zv-ULp" id="47p-uc-bub"/>
+                <outlet property="descriptionLabel" destination="Uff-Ik-dre" id="B4h-eZ-l04"/>
+                <outlet property="statusButton" destination="2c6-iX-QxN" id="qWB-wm-X6U"/>
+                <outlet property="titleLabel" destination="cea-iN-ohL" id="66p-Nj-sK3"/>
             </connections>
-            <point key="canvasLocation" x="138.93129770992365" y="32.394366197183103"/>
+            <point key="canvasLocation" x="138.93129770992365" y="45.422535211267608"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="calendar.badge.clock.rtl" catalog="system" width="128" height="109"/>
+        <image name="circle" catalog="system" width="128" height="123"/>
+    </resources>
 </document>
